force-app/main/default/objects/inspire1__Time_Tracker_List_View__c/inspire1__Time_Tracker_List_View__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Inspire Planner - Used to define custom lists for Time Tracker page.</description>
    <label>TimeTracker List Views</label>
</CustomObject>