force-app/main/default/objects/inspire1__Time_Tracker_List_View__c/fields/inspire1__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <type>TextArea</type>
</CustomField>