force-app/main/default/objects/inspire1__Time_Tracker_List_View__c/fields/inspire1__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>