force-app/main/default/objects/inspire1__Time_Tracker_List_View__c/fields/inspire1__Show_All_on_Weekly_View__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Show_All_on_Weekly_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show All on Weekly View</label>
    <type>Checkbox</type>
</CustomField>